# matrix-multiplication

./: .gitignore  CMakeLists.txt  README.md  REPORT.md  RESULTS.md
matrix_generator/: CMakeLists.txt  main.cpp
matrix_multiplication/: CMakeLists.txt  Matrix.hpp  common_main.cpp
matrix_multiplication/omp_parallel_for/: CMakeLists.txt  multiply.cpp
matrix_multiplication/parallel/: CMakeLists.txt  multiply.cpp  multiply1.cpp  multiply1_schedule_runtime.cpp  multiply2.cpp
matrix_multiplication/simple/: CMakeLists.txt  main.cpp  multiply.cpp
scripts/: execute_different_thread_nums.sh  execute_tests.sh  execute_tests1.sh  execute_tests2.sh  generate_matrices.sh
